--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/videojs-flvjs@0.2.0/dist/videojs-flvjs.min.js" integrity="sha256-9E4vlrJpHeWFm/dzSKOps4Csfx0X1ReuUX43FWEeSJE=" crossorigin="anonymous"></script>
 </head>
 <body>
-<video id="player" class="video-js vjs-default-skin" height="360" width="auto"
+<video id="player" class="video-js vjs-default-skin vjs-big-play-centered" height="360" width="auto"
        controls preload="none" data-setup='{}'>
     <source src="ws://kif2020.kiranamegatara.com:8000/live/stream.flv" type="video/flv"/>
 </video>
